--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -58,6 +58,30 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
+  function playSound(e) {
+    // e is keyboard event info
+    // ${} 
+    // querySelector - css selector
+    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+    const key = document.querySelector(`div[data-key="${e.keyCode}"]`);
+    if (!audio) return; // stop the function
+    audio.currentTime = 0; // rewind to start; 
+    audio.play(); // will not play again
+    // adding the class
+    key.classList.add('playing');
+  }
+
+  function removeTranstion(e) {
+    if (e.propertyName !== 'transform') return; // skip it if it is not transform
+    console.log(e.propertyName);
+    // this --> what get call against, so this is the key
+    this.classList.remove('playing');
+  }
+
+  // using the transition end event
+  const keys = document.querySelectorAll('.key');
+  keys.forEach(key => key.addEventListener('transitionend', removeTranstion));
+   window.addEventListener('keydown', playSound);
 
 </script>
 
