--- a/02 - JS + CSS Clock/index-START.html
+++ b/02 - JS + CSS Clock/index-START.html
@@ -61,12 +61,47 @@
       background:black;
       position: absolute;
       top:50%;
+      transform-origin:100%;
+      transform: rotate(90deg);
+      transition: all 0.05s;
+      transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
     }
 
   </style>
 
   <script>
+  const secondHand = document.querySelector('.second-hand');
+  const minsHand = document.querySelector('.min-hand');
+  const hourHand = document.querySelector('.hour-hand');
+  var trackingSecond = 0;
 
+  function setDate() {
+    // grab the date
+    const now = new Date();
+    const seconds = now.getSeconds();
+
+    // fixed the weird animation when second is 0 (0-59)
+    if (seconds === 0) {
+      trackingSecond = trackingSecond + 1;
+    }
+
+    const secondsDegrees = (((seconds + trackingSecond * 60) / 60) * 360) + 90;
+    secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
+
+    const mins = now.getMinutes();
+    const minsDegress = ((mins / 60) * 360) + 90;
+    minsHand.style.transform = `rotate(${minsDegress}deg)`;
+
+
+    const hour = now.getHours();
+    const hourDegrees = ((hour / 12) * 360) + 90;
+    hourHand.style.transform = `rotate(${hourDegrees}deg)`;
+  }
+
+  //run every second
+  setInterval(setDate, 1000);
+  // set immediately
+  setDate();
 
   </script>
 </body>
