--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -26,16 +26,46 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19?
+    var isAdult = people.some(function(person) {
+      var currentYear = (new Date()).getFullYear();
+      if (currentYear -  person.year >= 19) {
+        return true;
+      }
+    });
+
+    // var isAdult = people.some(person => {
+    //    var currentYear = (newDate()).getFullYear();
+    //    return currentYear -  person.year >= 19;
+    // })
+
     // Array.prototype.every() // is everyone 19?
+    var allAdult = people.every(person => {
+         var currentYear = (new Date()).getFullYear();
+         return currentYear -  person.year >= 19;
+      })
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
+    // return the first item you find
+    var comment =  comments.find(comment => comment.id === 823423);
+    console.log(comment);
     // find the comment with the ID of 823423
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
 
+    var index = comments.findIndex(comment => comment.id === 823423);
+
+    // splice mutable the array
+    // comments.splice(index, 1);
+    // console.table(comments);
+
+    var newComments = [
+      ...comments.slice(0, index),
+      ...comments.slice(index + 1)
+    ];
+    console.table(newComments);
   </script>
 </body>
 </html>
