--- a/08 - Fun with HTML5 Canvas/index-START.html
+++ b/08 - Fun with HTML5 Canvas/index-START.html
@@ -7,6 +7,54 @@
 <body>
 <canvas id="draw" width="800" height="800"></canvas>
 <script>
+	var canvas = document.querySelector('#draw');
+	var ctx = canvas.getContext('2d');
+	canvas.width = window.innerWidth;
+	canvas.height = window.innerHeight;
+	ctx.strokeStyle = '#BADA55';
+	ctx.lineJoin = 'round';
+	ctx.lineCap = 'round';
+	ctx.lineWidth = 100;
+
+	var isDrawing = false;
+	var lastX = 0;
+	var lastY = 0;
+	var hue = 0;
+	var direction = true;
+
+	function draw (e) {
+		if (!isDrawing) return;
+		ctx.strokeStyle = `hsl(${hue}, 100%, 50%)`;
+		ctx.beginPath();
+		ctx.moveTo(lastX, lastY);
+		ctx.lineTo(e.offsetX, e.offsetY);
+		ctx.stroke();
+
+		[lastX, lastY] = [e.offsetX, e.offsetY];
+		console.log(e);
+
+		hue++;
+		if (hue >= 360) {
+		 	hue = 0;
+		}
+		if (ctx.lineWidth >= 100 || ctx.lineWidth <= 1) {
+		    direction = !direction;
+		}
+
+		if(direction) {
+		  ctx.lineWidth++;
+		} else {
+		  ctx.lineWidth--;
+		}
+	}
+
+	canvas.addEventListener('mousedown', (e) => {
+		isDrawing = true;
+		[lastX, lastY] = [e.offsetX, e.offsetY];
+	});
+	canvas.addEventListener('mousemove', draw);
+	canvas.addEventListener('mouseup', () => isDrawing = false);
+	canvas.addEventListener('mouseout', () => isDrawing = false);
 </script>
 
 <style>
